Performance improvements in ldlang

--- a/zlib/Makefile
+++ b/zlib/Makefile
@@ -382,7 +382,7 @@ target_cpu = x86_64
 target_os = linux-gnu
 target_vendor = pc
 toolexecdir = $(libdir)/gcc-lib/$(target_alias)
-toolexeclibdir = $(libdir)/../lib
+toolexeclibdir = $(libdir)/../lib64
 top_build_prefix = 
 top_builddir = .
 top_srcdir = .
